manifests/showks-canvas-kyohmizu5/manifest.yaml
---
# Source: showks-canvas/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-canvas-kyohmizu5
  namespace: showks
  labels:
    app: showks-canvas-kyohmizu5
    class: showks-canvas
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: app-port
  selector:
    app: showks-canvas-kyohmizu5

---
# Source: showks-canvas/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-canvas-kyohmizu5
  namespace: showks
  labels:
    app: showks-canvas-kyohmizu5
    class: showks-canvas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-canvas-kyohmizu5
  template:
    metadata:
      labels:
        app: showks-canvas-kyohmizu5
        class: showks-canvas
    spec:
      containers:
        - name: showks-canvas-kyohmizu5
          image: cloudnativedaysjp/showks-canvas-kyohmizu5:prod-baeea5ba0262afe21a6421c42fe3dc90463930d1
          ports:
            - name: app-port
              containerPort: 8080
              protocol: TCP

---
# Source: showks-canvas/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-canvas-kyohmizu5
  namespace: showks
  labels:
    class: showks-canvas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "showks-canvas-kyohmizu5"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - showks-canvas-kyohmizu5.showks.cloudnativedays.jp
      secretName: tls-certificate
  rules:
  - host: showks-canvas-kyohmizu5.showks.cloudnativedays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-canvas-kyohmizu5
          servicePort: 8080
